--- a/style/base.css
+++ b/style/base.css
@@ -39,7 +39,7 @@
         padding-left: 0.3em !important; 
     }
 
-    li.sA, li.a, aside dt, img#docs, dd, div.code:hover {
+    li.sA:hover, li.a:hover, aside dt:hover, img#docs:hover, dd:hover, div.code:hover {
         cursor: pointer;
     }
 
@@ -175,7 +175,6 @@
 
     p.title:hover, p.stitle:hover {
         cursor: pointer;
-        color: #00ffc8;
     }
 
     article {
@@ -361,18 +360,31 @@
         padding-bottom: 2rem;
     }
 
+    /*====================ToolBar====================*/
+
     div#auto td:hover {
         background: #dddddd;
     }
 
-    /*====================ToolBar====================*/
+    .autocomplete-items div:hover {
+        background-color: #e9e9e9; 
+    }
+
+    img.themeimg:hover {
+        filter: drop-shadow(0rem 0rem 1rem #a8a8a8);
+        cursor: pointer;
+    }
+
+    input[type=range]:hover {
+        height: 1.5rem;
+    }
 
     section#tool {
         position: absolute;
         top: 0;
         right: 0;
         padding: 5rem 4rem;
-        padding-bottom: 100%;
+        padding-bottom: 100rem;
         width: calc(100% - (7% + 10rem));
         height: 100%;
         overflow: visible;
@@ -448,7 +460,7 @@
         transition-duration: 0.5s;
     }
 
-    tr.last td {
+    tr:last-child td {
         border-radius: 0rem 0rem 1.5rem 1.5rem;
     }
 
@@ -458,7 +470,6 @@
         border-bottom: none;
         border-top: none;
         z-index: 999999999999999999999999999999999999999999999999999999999999999999999999999999999999 !important;
-        /*position the autocomplete items to be the same width as the container:*/
         top: 100%;
         left: 0;
         right: 0;
@@ -472,18 +483,7 @@
         background-color: #fff; 
         border-bottom: 1px solid #d4d4d4; 
     }
-      
-    /*when hovering an item:*/
-    .autocomplete-items div:hover {
-        background-color: #e9e9e9; 
-    }
 
-    img.themeimg:hover {
-        filter: drop-shadow(0rem 0rem 1rem #a8a8a8);
-        cursor: pointer;
-    }
-      
-    /*when navigating through the items using the arrow keys:*/
     .autocomplete-active {
         background-color: #00ffff !important; 
     }
@@ -511,7 +511,7 @@
         filter: drop-shadow(0rem 0rem 0.5rem #00ffc8);
     }
 
-    input[type=range] {
+    input[type = range] {
         -webkit-appearance: none; 
         overflow: hidden;
         width: 20rem; 
@@ -524,13 +524,17 @@
         transition-property: height;
         transition-duration: 0.3s;
     }
+
+    p.rangeTxt {
+        font-size: 1rem;
+        margin-left: 1rem;
+
+        transition-property: font-size;
+        transition-duration: 0.3s;
+    }
     
     input[type=range]:focus {
         outline: none;
-    }
-
-    input[type=range]:hover {
-        height: 1.5rem;
     }
 
     input[type=range]:hover + p.rangeTxt {
@@ -571,13 +575,5 @@
         padding: 3rem;
         border-radius: 3rem;
         box-shadow: 0rem 0rem 0.8rem #dddddd;
-    }
-
-    p.rangeTxt {
-        font-size: 1rem;
-        margin-left: 1rem;
-
-        transition-property: font-size;
-        transition-duration: 0.3s;
     }
 }
