--- a/style/base.css
+++ b/style/base.css
@@ -193,7 +193,7 @@
     p.title {
         display: block;
         font-size: 1.9rem;
-        font-weight: 550;
+        font-weight: bold;
         margin-bottom: 2.3rem;
 
         transition-property: color;
@@ -203,7 +203,7 @@
     p.stitle {
         display: block;
         font-size: 1.4rem;
-        font-weight: 550;
+        font-weight: bold;
         margin-bottom: 2.3rem;
 
         transition-property: color;
