--- a/style/highlighting.css
+++ b/style/highlighting.css
@@ -1,24 +1,20 @@
-@font-face{ font-family: 'JetBrains Mono'; src:url(font/JetBrainsMono-Medium.woff) format('woff'); }
-@font-face{ font-family: 'JetBrains Mono I'; src:url(font/JetBrainsMono-Medium-Italic.woff) format('woff'); }
-@font-face{ font-family: 'D2Coding'; src:url(font/D2Coding.woff) format('woff'); }
-
-.hljs{ display: block; background:transparent; font-family: 'JetBrains Mono', 'D2Coding'; color:#414141; }
-.hljs * { font-size: 1rem; font-family: 'JetBrains Mono', 'D2Coding'; color:#414141; }
+.hljs{ display: block; background: transparent; font-family: 'JetBrains Mono', 'D2Coding'; color: #414141; }
+.hljs * { font-size: 1rem; font-family: 'JetBrains Mono', 'D2Coding'; color: #414141; }
 .hljs,.hljs-subst{ color:#414141; }
 .hljs-comment{ color:#888; font-family: 'JetBrains Mono I', 'D2Coding'; }
 /* .hljs-attribute,.hljs-doctag,.hljs-keyword,.hljs-meta-keyword,.hljs-name,.hljs-selector-tag{ font-weight:600; } */
 .hljs-params{ color: #414141 !important; }
-.hljs-keyword{ color: #ff00aa; font-family: 'JetBrains Mono I'; }
+.hljs-keyword{ color: #ff00aa; font-family: 'JetBrains Mono I'; font-weight: bold; }
 .hljs-deletion,.hljs-quote,.hljs-selector-id,.hljs-string,.hljs-template-tag,.hljs-type{ color:#ffc400; }
 .hljs-number{ color: #c300ff; }
 .hljs-selector-class{ color: #2d70ff; }
 .hljs-section,.hljs-title, .hljs-attr{ color:#00ffc8; }
 .hljs-link,.hljs-regexp,.hljs-selector-attr,.hljs-selector-pseudo,.hljs-symbol,.hljs-template-variable,.hljs-variable{ color:#00f7ff; }
-.hljs-literal{ color:#ffa600; font-family: 'JetBrains Mono I'; }
-.hljs-addition,.hljs-bullet,.hljs-code{ color:#ff00aa; }
-.hljs-built_in{ color:#9670ff; }
-.hljs-meta{ color:#1f7199; }
-.hljs-meta-string{ color:#4d99bf; }
+.hljs-literal{ color: #ffa600; font-family: 'JetBrains Mono I'; }
+.hljs-addition,.hljs-bullet,.hljs-code{ color: #ff00aa; } 
+.hljs-built_in{ color :#9670ff; }
+.hljs-meta{ color: #1f7199; }
+.hljs-meta-string{ color: #4d99bf; }
 .hljs-emphasis{ font-family: 'JetBrains Mono I'; font-size: 0.9rem !important; }
 
 @media screen and (max-width:800px){
@@ -27,14 +23,13 @@
     }
 }
 
-
 @media(prefers-color-scheme: dark){
     .hljs{ display: block; background:transparent; font-family: 'JetBrains Mono', 'D2Coding'; color:white; text-shadow: 0em 0em 0.5em white; }
     .hljs * { font-family: 'JetBrains Mono', 'D2Coding'; color:white; text-shadow: 0em 0em 0.5em white; }
     .hljs,.hljs-subst{ color:white; text-shadow: 0em 0em 0.5em white; }
     .hljs-comment{ color:#888; text-shadow: 0em 0em 0.5em #888888bd; font-family: 'JetBrains Mono I', 'D2Coding'; }
     /* .hljs-attribute,.hljs-doctag,.hljs-keyword,.hljs-meta-keyword,.hljs-name,.hljs-selector-tag{ font-weight:600; } */
-    .hljs-keyword{ color: #ff00aa; font-family: 'JetBrains Mono I'; text-shadow: 0em 0em 0.5em #ff00aac2; }
+    .hljs-keyword{ color: #ff00aa; font-family: 'JetBrains Mono I'; font-weight: bold; text-shadow: 0em 0em 0.5em #ff00aac2; }
     .hljs-deletion,.hljs-quote,.hljs-selector-id,.hljs-string,.hljs-template-tag,.hljs-type{ color:#ffc400; text-shadow: 0em 0em 1em #ffc400; }
     .hljs-number{ color: #c300ff; text-shadow: 0em 0em 0.5em #c300ffc4; }
     .hljs-selector-class{ color: #2d70ff; text-shadow: 0em 0em 0.5em #2d6fffc9; }
