--- a/style/highlighting.css
+++ b/style/highlighting.css
@@ -4,7 +4,7 @@
 .hljs-comment{ color:#888; font-family: 'JetBrains Mono I', 'D2Coding'; }
 /* .hljs-attribute,.hljs-doctag,.hljs-keyword,.hljs-meta-keyword,.hljs-name,.hljs-selector-tag{ font-weight:600; } */
 .hljs-params{ color: #414141 !important; }
-.hljs-keyword{ color: #ff00aa; font-family: 'JetBrains Mono I'; font-weight: bold; }
+.hljs-keyword{ color: #ff00aa; font-family: 'JetBrains Mono I'; }
 .hljs-deletion,.hljs-quote,.hljs-selector-id,.hljs-string,.hljs-template-tag,.hljs-type{ color:#ffc400; }
 .hljs-number{ color: #c300ff; }
 .hljs-selector-class{ color: #2d70ff; }
@@ -25,7 +25,7 @@
 
 @media(prefers-color-scheme: dark){
     .hljs{ display: block; background:transparent; font-family: 'JetBrains Mono', 'D2Coding'; color:white; text-shadow: 0em 0em 0.5em white; }
-    .hljs * { font-family: 'JetBrains Mono', 'D2Coding'; color:white; text-shadow: 0em 0em 0.5em white; }
+    .hljs * { font-family: 'JetBrains Mono', 'D2Coding'; color: white; text-shadow: 0em 0em 0.5em white; }
     .hljs,.hljs-subst{ color:white; text-shadow: 0em 0em 0.5em white; }
     .hljs-comment{ color:#888; text-shadow: 0em 0em 0.5em #888888bd; font-family: 'JetBrains Mono I', 'D2Coding'; }
     /* .hljs-attribute,.hljs-doctag,.hljs-keyword,.hljs-meta-keyword,.hljs-name,.hljs-selector-tag{ font-weight:600; } */
