--- a/style/base.css
+++ b/style/base.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
-
 @media screen and (min-width:801px){
     *::-webkit-scrollbar{
         width: 0rem; 
@@ -102,14 +99,14 @@
 
     aside dl {
         position: relative;
-        top: 7%;
+        top: 10%;
         width: 100%;
         transition-duration: 0s;
     }
 
     aside dt {
         height: 2.2rem;
-        margin-bottom: calc(1.1rem + 7%);
+        margin-bottom: calc(1.1rem + 10%);
         padding: 0.5rem 0;
         border-radius: 0.5rem;
         position: relative;
@@ -123,7 +120,7 @@
         filter: invert(0%);
     }
 
-    aside span#list {
+    aside span.list {
         margin: 0;
         padding: 3rem 0rem;
         display: none;
@@ -136,7 +133,7 @@
         left: 0rem;
     }
 
-    span#list h1 {
+    span.list h1 {
         font-size: 1.7rem;
         font-weight: bold;
         display: inline;
@@ -154,7 +151,7 @@
         margin: 0.2rem 0;
     }
 
-    span#list dd {
+    span.list dd {
         font-size: 1.1rem;
         display: inline-block;
         font-weight: 500;
@@ -163,7 +160,7 @@
 
     span.sideList {
         position: relative;
-        top: calc(1.1rem + 7%);
+        top: calc(1.1rem + 10%);
         display: block;
     }
 
