--- a/style/index.css
+++ b/style/index.css
@@ -2,9 +2,125 @@
     width: 0rem;
 }
 
-html {
+html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     overflow-x: hidden;
+    font-family: 'Noto Sans', 'Noto Sans KR';
+}
+
+/*====================Header====================*/
+
+header {
+    position: fixed;
+    background-color: black;
+    width: 100%;
+    padding: 2rem 15%;
+    z-index: 9999999;
+}
+
+.header_obj {
+    width: 3rem;
+    height: auto;
+    cursor: pointer;
+}
+
+img#login_img {
+    background-color: white;
+    position: fixed;
+    right: 15%;
+    border-radius: 5rem;
+}
+
+/*====================Content====================*/
+
+article {
+    padding-top: 12rem;
+}
+
+article section {
+    padding: 10rem 12%;
+}
+
+article section:first-child {
+    padding-top: 0rem;
+}
+
+/*====================Content - main====================*/
+
+div.block:hover {
+    box-shadow: 0rem 0rem 1.5rem #cfcfcf;
+}
+
+section#main {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 5rem;
+}
+
+div.block {
+    flex: 1 1 15%;
+    border-radius: 1.5rem;
+    box-shadow: 0rem 0rem 1rem #dddddd;
+    padding: 2rem;
+    margin: 3% 1rem;
+
+    transition-property: box-shadow;
+    transition-duration: 0.3s;
+}
+
+div.block div {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+img.docs_img {
+    display: inline;
+    width: 2rem;
+    height: auto;
+    filter: invert(100%);
+    margin-right: 1rem;
+}
+
+h2.title {
+    display: inline;
+    font-size: 1.5rem;
+}
+
+div#index {
+    text-align: center;
+}
+
+div#index img.docs_img {
+    margin: 0;
+    position: relative;
+    top: calc(50% - 4rem / 2);
+    width: 4rem;
+}
+
+/*====================Content - ChangeLog====================*/
+
+section#log {
+    background: black;
+    color: white;
+}
+
+h1.title {
+    font-size: 2rem;
+    margin-bottom: 5rem;
+}
+
+div.logblock {
+    margin-bottom: 7rem;
+}
+
+div.logblock li {
+    font-size: 1.2rem;
+    line-height: 2rem;
+}
+
+div.logblock:last-child {
+    margin-bottom: 0rem;
 }
