--- a/style/highlighting_d.css
+++ b/style/highlighting_d.css
@@ -3,6 +3,7 @@
 .hljs,.hljs-subst{ color:white; text-shadow: 0em 0em 0.5em white; }
 .hljs-comment{ color:#888; text-shadow: 0em 0em 0.5em #888888bd; font-family: 'JetBrains Mono I', 'D2Coding'; }
 /* .hljs-attribute,.hljs-doctag,.hljs-keyword,.hljs-meta-keyword,.hljs-name,.hljs-selector-tag{ font-weight:600; } */
+.hljs-params{ color: #ffffff !important; }
 .hljs-keyword{ color: #ff00aa; font-family: 'JetBrains Mono I'; font-weight: bold; text-shadow: 0em 0em 0.5em #ff00aac2; }
 .hljs-deletion,.hljs-quote,.hljs-selector-id,.hljs-string,.hljs-template-tag,.hljs-type{ color:#ffc400; text-shadow: 0em 0em 1em #ffc400; }
 .hljs-number{ color: #c300ff; text-shadow: 0em 0em 0.5em #c300ffc4; }
