--- a/style/idx_mobile.css
+++ b/style/idx_mobile.css
@@ -26,6 +26,10 @@ header {
     cursor: pointer;
 }
 
+header div {
+    display: inline;
+}
+
 img#login_img {
     width: 2.3rem;
     background-color: white;
@@ -36,15 +40,29 @@ img#login_img {
 
 /*====================Content====================*/
 
-article {
-    padding-top: 8rem;
+article#notice {
+    display: block;
+    margin-top: 5.2rem !important;
+    background-color: black;
+    cursor: pointer;
 }
 
-article section {
+article#notice img {
+    width: 100%;
+    height: 150px;
+    background: url(../img/notice/github.png) no-repeat 50% center;
+    background-size: 160% auto;
+}
+
+article#con {
+    padding-top: 3rem;
+}
+
+article#con section {
     padding: 10rem 12%;
 }
 
-article section:first-child {
+article#con section:first-child {
     padding-top: 0rem;
 }
 
