--- a/style/mobile.css
+++ b/style/mobile.css
@@ -421,7 +421,7 @@
         height: auto;
     }
 
-    p#view_txt {
+    div#view p {
         display: inline;
         margin-left: 1rem;
         position: relative;
