--- a/style/acc.css
+++ b/style/acc.css
@@ -1,183 +1,185 @@
-*::-webkit-scrollbar{
-    width: 0rem; 
-    height: 0rem; 
+
+@media screen and (min-width:801px){
+    *::-webkit-scrollbar{
+        width: 0rem; 
+        height: 0rem; 
+    }
+
+    * {
+        margin: 0;
+    }
+
+    html, body {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        font-family: 'Noto Sans', 'Noto Sans KR';
+    }
+
+    html.non-center, body.non-center {
+        text-align: left;
+    }
+
+    header {
+        background: black;
+        color: white;
+        width: 100000000000000000000000000000000rem;
+        height: 30rem;
+        display: table-cell;
+        vertical-align: middle;
+        table-layout: auto;
+        text-align: center;
+    }
+
+    header div {
+        display: inline;
+        vertical-align: middle;
+    }
+
+    img#docs {
+        filter: invert(0%);
+        width: 5rem;
+        height: 5rem;
+        margin-bottom: 3rem;
+    }
+
+    article {
+        margin-top: 7rem;
+        margin-bottom: 7rem;
+        padding: 0 5rem;
+    }
+
+    form * {
+        margin-bottom: 4rem;
+    }
+
+    input[type = 'text'], input[type = 'password'], input[type = 'email'] {
+        width: 34rem;
+        height: 3rem;
+        font-family: 'Noto Sans', 'Noto Sans KR';
+        font-size: 1.1rem;
+        outline: none;
+        border-radius: 2rem;
+        border: 0.3rem solid white;
+        box-shadow: 0rem 0rem 0.8rem 0rem #dddddd;
+        padding: 0rem 2rem;
+
+        transition-property: box-shadow;
+        transition-duration: 0.3s;
+    }
+
+    img#profile{
+        width: 10rem;
+        height: 10rem;
+        border-radius: 7rem 7rem 7rem 7rem;
+        box-shadow: 0rem 0rem 0.8rem 0rem #dddddd;
+        border: none;
+        cursor: pointer;
+        padding: 0rem;
+    }
+
+    input[type = file]{
+        display: none;
+    }
+
+    button {
+        background: black;
+        color: white;
+        font-family: 'Noto Sans', 'Noto Sans KR';
+        font-size: 1.15rem;
+        font-weight: bold;
+        outline: none;
+        width: 10rem;
+        height: 4rem;
+        border-radius: 2.5rem;
+        border: black;
+
+        transition-property: color, background, border, box-shadow;
+        transition-duration: 0.42s;
+    }
+
+    p.dscrpt {
+        display: inline;
+    }
+
+    a {
+        font-weight: bold;
+        color: black;
+    }
+
+    p.sml, p.sml a {
+        font-size: 0.9rem;
+    }
+
+    label {
+        display: inline;
+    }
+
+    input[type = 'checkbox'] {
+        display: none;
+    }
+
+    label[for] img {
+        display: inline;
+        background: url('../img/uncheck.png') no-repeat;
+        background-size: 1rem 1rem;
+        width: 1rem;
+        height: 1rem;
+        border: none;
+        margin: 0;
+        margin-right: 0.5rem;
+
+        transition-property: background;
+        transition-duration: 0.3s;
+    }
+
+    input[type = 'checkbox']:checked + div.dscrpt label[for] img {
+        display: inline;
+        background: url('../img/check.png') no-repeat;
+        background-size: 1rem 1rem;
+        width: 1rem;
+        height: 1rem;
+        border: none;
+        margin: 0;
+        margin-right: 0.5rem;
+    }
+
+    p.ttl, p.txt, p.sttl, li.txt {
+        line-height: 3rem !important;
+    }
+
+    p.ttl {
+        font-size: 2rem;
+        font-weight: bold;
+        margin: 2rem 0;
+    }
+
+    p.sttl {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    p.txt, li.txt {
+        font-size: 1.1rem;
+    }
+
+    #btm {
+        padding-bottom: 4rem !important;
+    }
+
+    input[type = 'text']:focus, input[type = 'password']:focus, input[type = 'email']:focus {
+        box-shadow: 0rem 0rem 1rem 0rem #00ffc8;
+    }
+
+    button:hover {
+        cursor: pointer;
+        color: black;
+        background: white;
+        border: white;
+        box-shadow: 0rem 0rem 1.5rem 0rem #dddddd;
+    }
+
+    label[for] img:hover {
+        cursor: pointer;
+    }
 }
-
-* {
-    margin: 0;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-family: 'Noto Sans', 'Noto Sans KR';
-}
-
-html.non-center, body.non-center {
-    text-align: left;
-}
-
-header {
-    background: black;
-    color: white;
-    width: 100000000000000000000000000000000rem;
-    height: 30rem;
-    display: table-cell;
-    vertical-align: middle;
-    table-layout: auto;
-    text-align: center;
-}
-
-header div {
-    display: inline;
-    vertical-align: middle;
-}
-
-img#docs {
-    filter: invert(0%);
-    width: 5rem;
-    height: 5rem;
-    margin-bottom: 3rem;
-}
-
-article {
-    margin-top: 7rem;
-    margin-bottom: 7rem;
-    padding: 0 5rem;
-}
-
-form * {
-    margin-bottom: 4rem;
-}
-
-input[type = 'text'], input[type = 'password'], input[type = 'email'] {
-    width: 34rem;
-    height: 3rem;
-    font-family: 'Noto Sans', 'Noto Sans KR';
-    font-size: 1.1rem;
-    outline: none;
-    border-radius: 2rem;
-    border: 0.3rem solid white;
-    box-shadow: 0rem 0rem 0.8rem 0rem #dddddd;
-    padding: 0rem 2rem;
-
-    transition-property: box-shadow;
-    transition-duration: 0.3s;
-}
-
-img#profile{
-    width: 10rem;
-    height: 10rem;
-    border-radius: 7rem 7rem 7rem 7rem;
-    box-shadow: 0rem 0rem 0.8rem 0rem #dddddd;
-    border: none;
-    cursor: pointer;
-    padding: 0rem;
-}
-
-input[type = file]{
-    display: none;
-}
-
-button {
-    background: black;
-    color: white;
-    font-family: 'Noto Sans', 'Noto Sans KR';
-    font-size: 1.15rem;
-    font-weight: bold;
-    outline: none;
-    width: 10rem;
-    height: 4rem;
-    border-radius: 2.5rem;
-    border: black;
-
-    transition-property: color, background, border, box-shadow;
-    transition-duration: 0.42s;
-}
-
-p.dscrpt {
-    display: inline;
-}
-
-a {
-    font-weight: bold;
-    color: black;
-}
-
-p.sml, p.sml a {
-    font-size: 0.9rem;
-}
-
-label {
-    display: inline;
-}
-
-input[type = 'checkbox'] {
-    display: none;
-}
-
-label[for] img {
-    display: inline;
-    background: url('../img/uncheck.png') no-repeat;
-    background-size: 1rem 1rem;
-    width: 1rem;
-    height: 1rem;
-    border: none;
-    margin: 0;
-    margin-right: 0.5rem;
-
-    transition-property: background;
-    transition-duration: 0.3s;
-}
-
-input[type = 'checkbox']:checked + div.dscrpt label[for] img {
-    display: inline;
-    background: url('../img/check.png') no-repeat;
-    background-size: 1rem 1rem;
-    width: 1rem;
-    height: 1rem;
-    border: none;
-    margin: 0;
-    margin-right: 0.5rem;
-}
-
-p.ttl, p.txt, p.sttl, li.txt {
-    line-height: 3rem !important;
-}
-
-p.ttl {
-    font-size: 2rem;
-    font-weight: bold;
-    margin: 2rem 0;
-}
-
-p.sttl {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-p.txt, li.txt {
-    font-size: 1.1rem;
-}
-
-#btm {
-    padding-bottom: 4rem !important;
-}
-
-input[type = 'text']:focus, input[type = 'password']:focus, input[type = 'email']:focus {
-    box-shadow: 0rem 0rem 1rem 0rem #00ffc8;
-}
-
-button:hover {
-    cursor: pointer;
-    color: black;
-    background: white;
-    border: white;
-    box-shadow: 0rem 0rem 1.5rem 0rem #dddddd;
-}
-
-label[for] img:hover {
-    cursor: pointer;
-}
-
