--- a/style/acc_mobile.css
+++ b/style/acc_mobile.css
@@ -14,11 +14,13 @@
         height: 100%;
         text-align: center;
         font-family: 'Noto Sans', 'Noto Sans KR';
+        overflow-x: hidden;
     }
 
     header {
         background: black;
         color: white;
+        width: 100vh;
         height: 20rem;
         display: table-cell;
         vertical-align: middle;
@@ -44,7 +46,6 @@
     article {
         margin-top: 5rem;
         margin-bottom: 5rem;
-        padding: 0 3rem;
     }
 
     form * {
