--- a/style/idx_dark.css
+++ b/style/idx_dark.css
@@ -19,7 +19,7 @@ header {
 /*====================Content====================*/
 
 article {
-    background: #3a3a3a;
+    background: #1d1d1d;
 }
 
 /*====================Content - main====================*/
