--- a/style/mobile.css
+++ b/style/mobile.css
@@ -326,7 +326,8 @@
     }
 
     td#no {
-        background: #ff00aa;
+        background: rgb(0 0 0 / 0%);
+        border: 0.2em solid #ff00aa !important;
     }
 
     img.sttc, img.prttp {
